--- a/IcyImeNetwork/wwwroot/index.html
+++ b/IcyImeNetwork/wwwroot/index.html
@@ -30,12 +30,14 @@
         </div>
     </div>
 
-    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
-    <script src="_framework/blazor.webassembly.js"></script>
-    <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <script>
+        setTimeout(() => {
+            console.lo
+        }, 3000);
+    </script>
 
     <script>
-        const texts = ["Loading", "Načítava sa", "Lädt", "読み込み中"];
+        const texts = ["Loading", "Načítava sa"];
         let currentIndex = 0;
 
         function changeText() {
@@ -50,8 +52,11 @@
         }
 
         changeText();
-        startTextChangeInterval(1000);
+        startTextChangeInterval(250);
     </script>
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
+    <script src="_framework/blazor.webassembly.js"></script>
+    <script>navigator.serviceWorker.register('service-worker.js');</script>
 </body>
 
 </html>
