--- a/IcyImeNetwork/wwwroot/index.html
+++ b/IcyImeNetwork/wwwroot/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/dotLoading.css"/>
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="IcyImeNetwork.styles.css" rel="stylesheet" />
+    <link href="_content/Radzen.Blazor/css/default.css" rel="stylesheet" />
+    <link href="MauiBlazorTransitionableDEMO.styles.css" rel="stylesheet" />
     <link href="manifest.webmanifest" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
@@ -52,7 +54,7 @@
         }
 
         changeText();
-        startTextChangeInterval(250);
+        startTextChangeInterval(850);
     </script>
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
