--- a/IcyImeNetwork/wwwroot/index.html
+++ b/IcyImeNetwork/wwwroot/index.html
@@ -56,6 +56,7 @@
         startTextChangeInterval(850);
     </script>
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
+    <script src="_content/BlazorAnimate/blazorAnimateInterop.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 </body>
